# rust-search-engine

./: Cargo.toml  README.md  Rocket.toml
public/: index.html
public/search/: index.html
public/siteInformation/: index.html
src/: main.rs
