[package]
name = "rust-search-engine"
version = "0.1.1"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = "1.0.147"
rocket_db_pools = { version = "0.1.0-rc.2", features = ["sqlx_sqlite"] }
reqwest = { version = "0.11", features = ["json"] }
regex = "1.7.0"

robots_txt = "0.7.0"
scraper = "0.13.0"